--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "neat2",
+  "name": "r-and-m-universe",
   "version": "0.1.0",
   "private": true,
+  "main": "public/electron.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "electron:start": "electron .",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^23.1.1",
+    "electron-is-dev": "^2.0.0"
   }
 }
