--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "electron:start": "electron .",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently -k \"BROWSER=none yarn start\" \"yarn:electron\"",
+    "electron": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
     "extends": [
@@ -38,7 +40,10 @@
     ]
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.5",
+    "concurrently": "^7.6.0",
     "electron": "^23.1.1",
-    "electron-is-dev": "^2.0.0"
+    "electron-is-dev": "^2.0.0",
+    "wait-on": "^7.0.1"
   }
 }
