--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "r-and-m-universe",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "main": "public/electron.js",
+  "repository": "https://github.com/deuxp/rnm-electron-updater-example",
   "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -55,6 +56,7 @@
     "@electron-forge/maker-rpm": "^6.0.5",
     "@electron-forge/maker-squirrel": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.5",
+    "@electron-forge/publisher-github": "^6.2.1",
     "concurrently": "^7.6.0",
     "electron": "^23.1.1",
     "electron-icon-maker": "^0.0.5",
